--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,13 @@ services:
       dockerfile: nginx.dockerfile
     container_name: nginx
     ports:
-      - 80:80
+      - 8080:80
     volumes:
-      - ./src:/var/www/html:delegated
+      - ./src/laravel:/var/www/html:delegated
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf 
     depends_on:
       - php
-      - redis
       - mysql
-      - mailhog
     networks:
       - laravel
 
@@ -27,14 +26,28 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - 3306:3306
+      - 4306:3306
     environment:
-      MYSQL_DATABASE: homestead
-      MYSQL_USER: homestead
-      MYSQL_PASSWORD: secret
+      MYSQL_DATABASE: magang
+      MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: secret
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
+    networks:
+      - laravel
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    links:
+      - mysql
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    restart: always
+    ports:
+      - 8081:80
     networks:
       - laravel
 
@@ -44,16 +57,7 @@ services:
       dockerfile: php.dockerfile
     container_name: php
     volumes:
-      - ./src:/var/www/html:delegated
-    networks:
-      - laravel
-
-  redis:
-    image: redis:alpine
-    container_name: redis
-    restart: unless-stopped
-    ports:
-      - 6379:6379
+      - ./src/laravel:/var/www/html:delegated
     networks:
       - laravel
 
@@ -63,45 +67,11 @@ services:
       dockerfile: composer.dockerfile
     container_name: composer
     volumes:
-      - ./src:/var/www/html
+      - ./src/laravel:/var/www/html
     working_dir: /var/www/html
     depends_on:
       - php
     user: laravel
     entrypoint: ['composer', '--ignore-platform-reqs']
-    networks:
-      - laravel
-
-  npm:
-    image: node:13.7
-    container_name: npm
-    volumes:
-      - ./src:/var/www/html
-    working_dir: /var/www/html
-    entrypoint: ['npm']
-    networks:
-      - laravel
-
-  artisan:
-    build:
-      context: .
-      dockerfile: php.dockerfile
-    container_name: artisan
-    volumes:
-      - ./src:/var/www/html:delegated
-    depends_on:
-      - mysql
-    working_dir: /var/www/html
-    user: laravel
-    entrypoint: ['php', '/var/www/html/artisan']
-    networks:
-      - laravel
-
-  mailhog:
-    image: mailhog/mailhog:latest
-    container_name: mailhog
-    ports:
-      - 1025:1025
-      - 8025:8025
     networks:
       - laravel
